# medrag-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: dependencies.py
app/api/routes/: chat.py  documents.py  health.py  search.py  sessions.py
app/core/: chain.py  embeddings.py  generator.py  prompts.py  reranker.py  retriever.py
app/db/: database.py  models.py
app/db/repositories/: chunk_repo.py  document_repo.py  session_repo.py
app/ingestion/: chunker.py  loader.py  metadata.py  pipeline.py
app/services/: cache_service.py  chat_service.py  ingestion_service.py  search_service.py
app/utils/: exceptions.py  logger.py
evaluation/: metrics.py  results.json  run_eval.py
evaluation/datasets/: medical_qa.json
scripts/: evaluate_rag.py  ingest_docs.py  init_db.sql  seed_sample_data.py
tests/: conftest.py  test_api.py  test_chain.py  test_chunker.py  test_retriever.py
